fix to nav on mobile

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -100,7 +100,9 @@ nav {
   .nav-logo {
     visibility: hidden !important;
     width: 0px;
+    padding: 0;
   }
+
   
 }
 
